tests/ui/imports/extern-prelude-extern-crate-fail.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/extern-prelude-extern-crate-fail.rs:16:9
   |
LL | / macro_rules! define_std_as_non_existent {
LL | |     () => {
LL | |         extern crate std as non_existent;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `define_std_as_non_existent!`
LL |   define_std_as_non_existent!();
   |   ----------------------------- in this macro invocation

error[E0433]: failed to resolve: use of undeclared crate or module `two_macros`
  --> $DIR/extern-prelude-extern-crate-fail.rs:10:9
   |
LL |         two_macros::m!();
   |         ^^^^^^^^^^ use of undeclared crate or module `two_macros`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
